Fix not showing map page when not logged in

--- a/src/static/css/quaver.css
+++ b/src/static/css/quaver.css
@@ -502,7 +502,7 @@ a:hover {
 }
 
 .mapsets .cover .song-name .creator span {
-    color: #45D6F5;
+
 }
 
 .mapsets .cover .status {
